# zilch

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
src/: action.rs  action_bar.rs  adb_shell_text.rs  categories.rs  index.html  input.css  knowledge.js  listview.rs  main.js  main.rs  metadata.rs  selection.js  shortcuts.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: apk.rs  lib.rs  main.rs  package.rs
