[package]
name = "zilch"
version = "0.1.0"
edition = "2024"

[dependencies]
adb_client = {version = "2.1.18", git = "https://github.com/lavafroth/adb_client", branch = "with-read-timeout"}
eframe = "0.33.2"
egui = "0.33.2"
egui_alignments = "0.3.6"
egui_extras = "0.33.2"
env_logger = "0.11.8"
rusb = "0.9.4"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.146"
