[package]
name = "zilch"
version = "0.2.0"
description = "Prune needless pre-installed Android apps"
authors = ["Himadri Bhattacharjee <107522312+lavafroth@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zilch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.89"
zip = { version = "2.2.0", default-features=false, features= ["deflate"] }
adb_client = "2.1.5"
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2"
resand = "0.2.0"
